[package]
name = "quasar_interfaces"
version = "0.0.0"
authors = ["Digital Native Foundation INC."]
edition = "2018"
description = "Collection of Queries and Responses in quasar cosmwasm contracts"
license = "Apache-2.0"
repository = "https://github.com/digitalnativeinc/quasar-cosmwasm"
homepage = "https://quasar.money"
documentation = "https://docs.quasar.money"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.2" 
cosmwasm-bignumber = "1.0.0"
cosmwasm-storage = "0.10.0"
terra-cosmwasm = "1.2.2" 
cosmwasm-std = "0.10.0"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.10.0"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true